fixed gap between 2 inputs

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,8 +28,6 @@ main {
 
   form.converter-form {
     @include flex(column);
-    // flex-wrap: wrap;
-    gap: $spacing-125;
 
     div.input-container {
       width: 100%;
@@ -37,10 +35,9 @@ main {
       grid-template-areas:
         'label label'
         'input select';
-      grid-template-columns: 55% 28%;
-      column-gap: 1rem;
-      justify-content: center;
-      // justify-content: space-evenly;
+      grid-template-columns: 50% 28%;
+      // column-gap: 1rem;
+      justify-content: space-evenly;
 
       label {
         grid-area: label;
@@ -73,6 +70,7 @@ main {
     place-items: center;
     gap: $spacing-050;
     padding: $spacing-075;
+    margin: $spacing-150 0;
     background: none;
     border: none;
     font-weight: $fweight-bold;
